test/negative/feature_assignmentoperations.java

public class feature_assignmentoperations {
  public feature_assignmentoperations() {}
  public void m(int x) {
    x+=42;
    x-=42;
    x*=42;
    x/=42;
    x%=42;
    x|=42;
    x&=42;
    x^=42;
    x<<=42;
    x>>=42;
    x>>>=42;
  }
}
